--- a/Emne6_Eksamen/Components/Pages/Home.razor
+++ b/Emne6_Eksamen/Components/Pages/Home.razor
@@ -2,9 +2,9 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Welcome!</h1>
+<h1>Lord of the Rings info!</h1>
 
-<p>Welcome to a lotr information app. </p>
+<p>Welcome to a LOTR information app. </p>
 <p>Here you can find information about the characters and Books in the Lord of the Rings.</p>
 
 <NavLink href="/category" class="btn btn-primary"> Category</NavLink>
