completely done now

--- a/Emne6_Eksamen/Components/Pages/Books/Books.razor
+++ b/Emne6_Eksamen/Components/Pages/Books/Books.razor
@@ -1,5 +1,6 @@
-﻿@inject BooksService BooksService
+﻿@inject IBooksService BooksService
 @inject HttpClient httpClient
+@using Emne6_Eksamen.Components.Pages.Interfaces
 
 @page "/Books"
 
