--- a/Emne6_Eksamen/Components/Pages/Characters/Characters.razor
+++ b/Emne6_Eksamen/Components/Pages/Characters/Characters.razor
@@ -1,5 +1,6 @@
-﻿@inject CharacterService CharacterService
+﻿@inject ICharacterService CharacterService
 @inject HttpClient httpClient
+@using Emne6_Eksamen.Components.Pages.Interfaces
 
 @page "/Characters"
 
